# agent-harness

./: .env.example  .gitignore  README.md  pyproject.toml
policies/: default.yaml
src/agent_harness/: __init__.py  config.py
src/agent_harness/api/: __init__.py  app.py  state.py
src/agent_harness/api/routes/: audit.py  dashboard.py  overrides.py  policies.py  sessions.py
src/agent_harness/audit/: __init__.py  models.py  trail.py
src/agent_harness/authorization/: __init__.py  limits.py  scopes.py
src/agent_harness/control/: __init__.py  kill_switch.py  override.py
src/agent_harness/identity/: __init__.py  credentials.py  delegation.py  principal.py
src/agent_harness/logging/: __init__.py  design_log.py  runtime_log.py
src/agent_harness/observability/: __init__.py  evaluation.py  tracing.py
src/agent_harness/orchestration/: __init__.py  graph.py  session.py  state.py
src/agent_harness/planning/: __init__.py  intent.py  plan.py  validator.py
src/agent_harness/policy/: __init__.py  engine.py  loader.py
tests/: test_audit.py  test_identity.py  test_policy.py
ui/: index.html  package.json
ui/src/: App.tsx  api.ts
ui/src/components/: Card.tsx  MetricCard.tsx  StatusBadge.tsx
ui/src/hooks/: useApi.ts
ui/src/pages/: AuditTrail.tsx  Dashboard.tsx  DesignLog.tsx  Overrides.tsx  Policies.tsx  SessionDetail.tsx  Sessions.tsx
